--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,9 @@
+html {
+    font-size: 12px;
+}
+
+
+
 body {
     font-family: 'Inconsolata', monospace;
     margin-left: 150px;
@@ -14,10 +20,14 @@ a:hover {
     text-decoration: line-through;
 }
 
+a:visited {
+    text-decoration: line-through;
+}
+
 
 .header {
-    height: 64px;
-   font-size: 12px;
+   height: 64px;
+   font-size: 1rem;
    text-align: right;
    padding-top: 18px;
    font-weight: 300;
@@ -27,7 +37,7 @@ a:hover {
     margin-top: 16px;
     margin-bottom: 48px;
     font-weight: 300;
-    font-size: 42px;
+    font-size: 3.5rem;
 }
 
 .navigationtitle {
@@ -36,15 +46,24 @@ a:hover {
     margin-bottom: 16px;
     font-weight: 300;
     font-style: oblique;
-    font-size: 12px
 
 }
 
 
 .links {
     text-align: right;
-    font-size: 12px;
+    font-size: 1rem;
+}
 
+.projecttitle {
+    margin-top: 48px;
+    margin-bottom: 16px;
+    font-weight: 300;
+    font-style: oblique;
+}
+
+.projectlinks {
+    font-size: 1rem;
 }
 
 .subtitle {
@@ -52,11 +71,12 @@ a:hover {
     margin-bottom: 48px;
     font-weight: 300;
     font-style: oblique;
-    font-size: 12px;
+    font-size: 1rem;
 }
 
 .mainentry {
     margin-bottom: 48px;
+    font-size: 1.2rem;
 }
 
 .dateentry {
