Add further image

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -100,7 +100,7 @@ a:hover {
 
 .images {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
     align-items: center;
 }
@@ -112,7 +112,7 @@ a:hover {
 
 .imgcontainer {
     height: 23rem;
-    margin: 2rem;
+    margin: 2.5rem;
 }
 
 
