--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -314,9 +314,15 @@ a:hover {
     font-size: 1.2rem;
 }
 
+.mainentryimagebreak {
+    margin-bottom: 0; 
+    font-size: 1.2rem;
+}
+
 .dateentry {
     text-align: right;
     font-size: 12px;
     font-style: oblique;
     font-weight: 300;
+    margin-bottom: 48px;
 }
