--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,44 @@ body {
     margin-right: 150px;
 }
 
+
+@media only screen and (min-width: 1365px) {
+    html {
+        font-size: 16px;
+    }
+
+    body {
+        margin-left: 190px;
+        margin-right: 190px;
+    }
+}
+
+@media only screen and (max-width:700px)   {
+    html {
+        font-size: 12px;
+    }
+
+    body {
+        margin-left: 110px;
+        margin-right: 110px;
+    }
+}
+
+
+@media only screen and (max-width:540px)  {
+
+    html {
+        font-size: 10px;
+    }
+
+    body {
+        margin-left: 70px;
+        margin-right: 70px;
+    }
+
+}
+
+
 /* hyperlinks */
 
 a:link {
