Add cartographer and add to index

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -119,7 +119,13 @@ a:hover {
     font-style: oblique;
 }
 
+#cartographerinfo {
+    opacity: 0;
+}
 
+#cartographertitle:hover ~ #cartographerinfo {
+    opacity: 1;
+}
 
 /* image gallery */
 
