--- a/resources/css/mapmakers.css
+++ b/resources/css/mapmakers.css
@@ -12,9 +12,12 @@ body {
 }
 
 p {
-    width: 100%;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    padding-left: 16rem;
+    padding-right: 16rem;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 
@@ -28,6 +31,15 @@ p {
         margin-left: 3px;
         margin-right: 3px;
     }
+
+    p {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        padding-left: 24rem;
+        padding-right: 24rem;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
 }
 
 @media only screen and (max-width:700px)   {
@@ -38,6 +50,15 @@ p {
     body {
         margin-left: 1px;
         margin-right: 1px;
+    }
+
+    p {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        padding-left: 10rem;
+        padding-right: 10rem;
+        margin-top: 0;
+        margin-bottom: 0;
     }
 }
 
@@ -53,6 +74,14 @@ p {
         margin-right: 1px;
     }
 
+    p {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        padding-left: 6rem;
+        padding-right: 6rem;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
 }
 
 
