--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -665,6 +665,14 @@ a:hover {
     opacity: 0;
 }
 
+#dawnpatrolpic{
+    transition: 1s;
+}
+
+#dawnpatrolpic:hover {
+    opacity: 0;
+}
+
 /* actual entries and text */
 
 .subtitle {
