Edit bomba ink curtain caption and add link to soon to be written collaberrations

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -156,6 +156,14 @@ a:hover {
     opacity: 1;
 }
 
+#collaberrationsinfo {
+    opacity: 0;
+}
+
+#collaberrationstitle:hover ~ #collaberrationsinfo {
+    opacity: 1;
+}
+
 /* image gallery */
 
 .arcadetitle {
