--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -115,7 +115,7 @@ a:hover {
 
 
 
-/* left hand links */
+/* left hand project links */
 
 .projecttitle {
     margin-top: 48px;
@@ -156,13 +156,6 @@ a:hover {
     opacity: 1;
 }
 
-#collaberrationsinfo {
-    opacity: 0;
-}
-
-#collaberrationstitle:hover ~ #collaberrationsinfo {
-    opacity: 1;
-}
 
 /* image gallery */
 
