--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -729,6 +729,14 @@ a:hover {
 #routeburnpic:hover {
     opacity: 0;
 }
+
+#christchurchbeachpic{
+    transition: 1s;
+}
+
+#christchurchbeachpic:hover {
+    opacity: 0;
+}
 /* actual entries and text */
 
 .subtitle {
