--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -795,6 +795,32 @@ a:hover {
     opacity: 0;
 }
 
+#spookhousepic{
+    transition: 1s;
+}
+
+#spookhousepic:hover {
+    opacity: 0;
+}
+
+#parchedwalkerpic{
+    transition: 1s;
+}
+
+#parchedwalkerpic:hover {
+    opacity: 0;
+}
+
+#hotmoonpic{
+    transition: 1s;
+}
+
+#hotmoonpic:hover {
+    opacity: 0;
+}
+
+
+
 /* actual entries and text */
 
 .subtitle {
