--- a/resources/css/indexstyle.css
+++ b/resources/css/indexstyle.css
@@ -7,8 +7,8 @@ html {
 
 body {
     font-family: 'Inconsolata', monospace;
-    margin-left: 33%;
-    margin-right: 33%;
+    margin-left: 150px;
+    margin-right: 150px;
 }
 
 p {
@@ -17,80 +17,39 @@ p {
 }
 
 
-@media only screen and (max-width:1800px)   {
-    body {
-        margin-left: 31%;
-        margin-right: 31%;
+@media only screen and (min-width: 1365px) {
+    html {
+        font-size: 16px;
     }
 
-}
-
-
-
-@media only screen and (max-width:1600px)   {
     body {
-        margin-left: 29%;
-        margin-right: 29%;
+        margin-left: 380px;
+        margin-right: 380px;
     }
-
 }
 
-
-
-@media only screen and (max-width:1400px)   {
-    body {
-        margin-left: 27%;
-        margin-right: 27%;
-    }
-
-}
-
-
-@media only screen and (max-width:1200px)   {
-    body {
-        margin-left: 25%;
-        margin-right: 25%;
-    }
-
-}
-
-
-
-@media only screen and (max-width:1000px)   {
+@media only screen and (max-width:700px)   {
     html {
         font-size: 12px;
-    }   
-    
-    body {
-        margin-left: 23%;
-        margin-right: 23%;
     }
 
+    body {
+        margin-left: 150px;
+        margin-right: 150px;
+    }
 }
 
 
-@media only screen and (max-width:800px)   {
-
-
-    body {
-        margin-left: 21%;
-        margin-right: 21%;
-    }
-
-}
-
-
-@media only screen and (max-width:600px)  {
+@media only screen and (max-width:540px)  {
 
     html {
         font-size: 10px;
     }
 
     body {
-        margin-left: 19%;
-        margin-right: 19%;
+        margin-left: 100px;
+        margin-right: 100px;
     }
-
 
 }
 
