--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -370,6 +370,14 @@ a:hover {
 }
 
 
+.imgcontainerlargeportrait {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    height: 45rem;
+    margin: 1.5rem;
+}
+
 /* individual pic IDs for transitions */
 
 #mountainlakepic {
