--- a/resources/css/thearcade.css
+++ b/resources/css/thearcade.css
@@ -9,6 +9,7 @@ body {
     font-family: 'Inconsolata', monospace;
     margin-left: 1px;
     margin-right: 1px;
+    
 }
 
 p {
@@ -18,6 +19,7 @@ p {
     padding-right: 12rem;
     margin-top: 0;
     margin-bottom: 0;
+    line-height: 20px;
     
 }
 
@@ -40,6 +42,7 @@ p {
         padding-right: 28rem;
         margin-top: 0;
         margin-bottom: 0;
+        line-height: 20px;
     }
 }
 
@@ -60,6 +63,7 @@ p {
         padding-right: 14rem;
         margin-top: 0;
         margin-bottom: 0;
+        line-height: 16px;
     }
 }
 
@@ -82,6 +86,7 @@ p {
         padding-right: 10rem;
         margin-top: 0;
         margin-bottom: 0;
+        line-height: 14px;
     }
 }
 
