edit entries prior to Kentucky and add readingthroughwindow

--- a/resources/css/screenreader.css
+++ b/resources/css/screenreader.css
@@ -990,5 +990,20 @@ a:hover {
     opacity: 0;
 }
 
+#fernlightpic{
+    transition: 1s;
+}
+
+#fernlightpic:hover {
+    opacity: 0;
+}
+
+#mushroomspic{
+    transition: 1s;
+}
+
+#mushroomspic:hover {
+    opacity: 0;
+}
 
 
