--- a/resources/css/screenreader.css
+++ b/resources/css/screenreader.css
@@ -1006,4 +1006,27 @@ a:hover {
     opacity: 0;
 }
 
+#sandcomberpic{
+    transition: 1s;
+}
+
+#sandcomberpic:hover {
+    opacity: 0;
+}
+
+#watertwigspic{
+    transition: 1s;
+}
+
+#watertwigspic:hover {
+    opacity: 0;
+}
+
+#snowhookpic{
+    transition: 1s;
+}
+
+#snowhookpic:hover {
+    opacity: 0;
+}
 
